src/test/resources/bad/provided/029e-override-bad-type.lat
class A {
 void test() {}
}
class B extends A {
 void test(int a) {}
}

int main() {
 A a = new A;
 B b = new B;

 return 0;
}
